version 0.9.7
Put toolbars on the device tab for all the menu options
available in the device context menu, except for extend
volume.

version 0.9.6
Put toolbars on the volume group tabs for all the menu options
available in the logical and physical volume context menus.

version 0.9.5
Added a dialog for setting the flags on a partitions. Ie: boot, swap
and bios_grub.

version 0.9.4
Put in a new dialog for repairing RAID and mirror volumes that
are missing physical volumes. Combined the remove filesystem dialog
and the mkfs dialog into one. Improved handling of partial volume
groups.

version 0.9.3
Added support for displaying thin pools and volumes.
Put in a new dialog for creating thin volumes and snaps.
The lvremove dialog now warns when deleting thin pools with volumes.

version 0.9.2
Added support for raid1, raid4, raid5 and raid6.
Added support for the 'contiguous' policy in all dialogs that have
a policy option. Normal has always been supported.

version 0.9.1
Improved pvmove dialog with regard to mirrors and snapshots by making the
not movable parts clearly labeled.

version 0.9.0
Made compiling faster by removing #include <QtGui> everywhere. Added
more calls to QLabel->setBuddy() to improve mouse-less usage. Reformatted
code with program "astyle" to make it more consistent. Improved consistency
of dialog appearance too.

version 0.8.6
Fixed immediate crash when group is clustered. Fixed configuration dialog
buttons to work more as a user would expect. /etc/mtab permissions don't get
mangled now.

version 0.8.5
It is now possible to cancel a running mkfs process and some other long
running process should follow soon. Sizes may now be specified in traditional
powers of two (1KiB = 1024) or in powers of ten (1KB = 1000) SI units.

version 0.8.4
Added to, and improved, the configuration dialog. Property panels can now
be configured. Changed the detection of mounted filesystems to use
/proc/self/mountinfo rather than the depracated /etc/mtab file. Fixed