@@ -1,0 +1,25 @@
+/*
+ *
+ *
+ * Copyright (C) 2013 Benjamin Scott   <benscott@nwlink.com>
+ *
+ * This file is part of the kvpm project.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License,  version 3, as
+ * published by the Free Software Foundation.
+ *
+ * See the file "COPYING" for the exact licensing terms.
+ */
+
+#ifndef RESYNC_H
+#define RESYNC_H
+
+
+
+class LogVol;
+
+
+bool resync(LogVol *const lv);
+
+#endif
